[gd_scene load_steps=2 format=2]

[ext_resource path="res://CM/UI/PlaceholderTemplate/ReferenceItem.gd" type="Script" id=1]

[node name="Control" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1359.0
margin_bottom = 761.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1352.0
margin_bottom = 34.0

[node name="ReferenceName" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 4.0
margin_right = 192.0
margin_bottom = 30.0
text = "magic_school (MagicSchool)"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 196.0
margin_right = 220.0
margin_bottom = 34.0

[node name="PrefixUI" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 1352.0
margin_bottom = 74.0

[node name="PrefixLabel" type="Label" parent="VBoxContainer/PrefixUI"]
margin_top = 5.0
margin_right = 41.0
margin_bottom = 31.0
hint_tooltip = "This will be added before referenced item's name."
mouse_filter = 0
text = "prefix:"

[node name="PrefixEdit" type="LineEdit" parent="VBoxContainer/PrefixUI"]
margin_left = 45.0
margin_right = 115.0
margin_bottom = 36.0
caret_blink = true
caret_blink_speed = 0.5

[node name="ClearButton" type="Button" parent="VBoxContainer/PrefixUI"]
margin_left = 119.0
margin_right = 163.0
margin_bottom = 36.0
text = "Clear"

[connection signal="toggled" from="VBoxContainer/HBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="text_changed" from="VBoxContainer/PrefixUI/PrefixEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/PrefixUI/ClearButton" to="." method="_on_ClearButton_pressed"]
